objects/Pricing_Tool_Approval__c.object
<CustomObject>
    <fields>
        <fullName>AE_Design_Notes_and_Scope_Concerns__c</fullName>
        <label>AE Design Notes and Scope Concerns</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Branch__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Dev_Fees__c</fullName>
        <description>Missing Costs that reduce margin post ROD approval</description>
        <inlineHelpText>Project Affiliate or Acquisition Costs</inlineHelpText>
        <label>Affiliate/Dev Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Fee__c</fullName>
        <description>Updated with value from PVbid using PVbid sync button.</description>
        <inlineHelpText>Updated with value from PVbid using PVbid sync button.</inlineHelpText>
        <label>Affiliate Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_sign_of_wetlands__c</fullName>
        <inlineHelpText>If wetlands exist, enter all info here.</inlineHelpText>
        <label>Any sign of wetlands?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anyone_walked_the_site__c</fullName>
        <inlineHelpText>Has anyone walked the site to verify Topo, Wetlands, etc?  Enter all info here.</inlineHelpText>
        <label>Anyone walked the site?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applications_Engineer__c</fullName>
        <inlineHelpText>Select the applications engineer that you are working with on the pricing tool approval.</inlineHelpText>
        <label>Applications Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ed Condreay</fullName>
                </value>
                <value>
                    <fullName>Patrick Canning</fullName>
                </value>
                <value>
                    <fullName>Tarn Yates</fullName>
                </value>
                <value>
                    <fullName>TJ Murphy</fullName>
                </value>
                <value>
                    <fullName>Ben Foss-Michaelis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Copy of Status field - so that upon new/edit view of record, user won&apos;t see Status field (or this field) and a trigger will make sure the Status field (and as a consequence this field) is set to New (even on record Clone).</description>
        <formula>TEXT( Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apps_Engineer_Logged_in__c</fullName>
        <description>displays a 1 if the Person Responsible is the one logged in, used mostly for filters/reports</description>
        <formula>IF(  Person_Responsible__c  = $User.Id , 1 , 

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays a 1 if the Person Responsible is the one logged in, used mostly for filters/reports</inlineHelpText>
        <label>Apps Engineer Logged in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_there_union_labor_requirements__c</fullName>
        <inlineHelpText>Enter any union labor requirements.</inlineHelpText>
        <label>Are there union labor requirements?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Apps_Engineer_Email__c</fullName>
        <inlineHelpText>this pulls the email address of the apps engineer assigned field on the related opportunity</inlineHelpText>
        <label>Assigned Apps Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BidId__c</fullName>
        <description>The ID of the bid within the PVBid system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the bid within the PVBid system.</inlineHelpText>
        <label>BidId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Bond__c</fullName>
        <label>Bid Bond</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Title__c</fullName>
        <label>Bid Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_URL__c</fullName>
        <label>Bid URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Buy_American__c</fullName>
        <label>Buy American</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Submittal_Link__c</fullName>
        <label>CC Submittal Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Submittal_Status__c</fullName>
        <label>CC Submittal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changes_Since_Last_Submission__c</fullName>
        <inlineHelpText>Please list out anything that has changed since the last submission.</inlineHelpText>
        <label>Changes Since Last Submission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field set by workflow rule, cleared by trigger.  When set, causes trigger to verify the Stage of the Opportunity and take appropriate action.</description>
        <label>Check Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_System_Size_from_Opportunity__c</fullName>
        <description>previously was just the following:  Opportunity__r.Project_System_Size__c    needed to modify to bring over different values based on record type of opportunity.</description>
        <formula>IF(Opportunity__r.RecordType.Id = &quot;012800000007g08&quot;, Opportunity__r.Project_System_Size__c,
IF(Opportunity__r.RecordType.Id = &quot;012340000007kaF&quot;,  Opportunity__r.Project_System_Size__c ,
 Opportunity__r.Original_Contract_System_Size__c ))</formula>
        <inlineHelpText>System size pulled through from the related opportunity</inlineHelpText>
        <label>Current System Size from Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_requirements_beyond_code__c</fullName>
        <inlineHelpText>Enter any requirements above and beyond the code, such as requiring use of copper electrical conductors, etc.</inlineHelpText>
        <label>Customer requirements relative to code?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Pricing_Needed_By__c</fullName>
        <inlineHelpText>Please allow more than 1 day to process this request.</inlineHelpText>
        <label>Date Pricing Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pricing_Tool_Approved__c</fullName>
        <inlineHelpText>autopopulates the date when approval is given</inlineHelpText>
        <label>Date  Pricing Tool Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pricing_Tool_Submitted_for_Approval__c</fullName>
        <inlineHelpText>autopopulates the date the pricing tool as submitted for approval</inlineHelpText>
        <label>Date Pricing Tool Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Completed__c</fullName>
        <inlineHelpText>Auto-populates the date the pricing request was completed.</inlineHelpText>
        <label>Date Pricing Request Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Entered__c</fullName>
        <inlineHelpText>Auto-populates the created date for this record.</inlineHelpText>
        <label>Date Request Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Started__c</fullName>
        <description>Date AE started working on Request, filled in manually by the AE</description>
        <inlineHelpText>Date AE started working on Request, filled in manually by the AE</inlineHelpText>
        <label>Date Request Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted__c</fullName>
        <inlineHelpText>autopopulates date that the request for a pricing tool is submitted</inlineHelpText>
        <label>Date Pricing Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Synced_to_Opportunity_Formula__c</fullName>
        <formula>Opportunity__r.Date_Pricing_Request_Synced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Synced to Opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve_Pricing_Tool__c</fullName>
        <formula>Date_Pricing_Tool_Approved__c -  Date_Pricing_Tool_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the # of calendar days between Date Pricing Tool was submitted for approval and Date Pricing Tool was approved.</inlineHelpText>
        <label>Days to Approve Pricing Tool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_Request__c</fullName>
        <formula>IF( Pricing_Request_Completed__c = FALSE, TODAY()-   Date_Request_Entered__c  ,
Date_Request_Completed__c - Date_Request_Entered__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of calendar days between Date Pricing Request was submitted and Date Pricing Request was Completed.   If not complete it uses TODAY - Date Pricing Request Submitted.</inlineHelpText>
        <label>Days to Complete Pricing Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decommissioning_Bond__c</fullName>
        <description>Missing costs that reduces margin post ROD aproval</description>
        <inlineHelpText>Cash Direct to town or standard bond</inlineHelpText>
        <label>Decommissioning Bond</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_COGS__c</fullName>
        <description>Updated with value from PVbid using PVbid sync button.</description>
        <inlineHelpText>Updated with value from PVbid using PVbid sync button.</inlineHelpText>
        <label>Dev COGS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_COGS__c</fullName>
        <inlineHelpText>Solar and Storage Total Direct Cost of Goods Sold</inlineHelpText>
        <label>Total Direct COGS $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_COGS_w__c</fullName>
        <inlineHelpText>Solar and Storage Direct Cost of Goods Sold in dollars per watt</inlineHelpText>
        <label>Total DCOGS $/W</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <inlineHelpText>Enter the Direct Margin % from the pricing tool, driven by the markup value within PVbid</inlineHelpText>
        <label>Direct Margin % from Pricing Tool</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Margins__c</fullName>
        <label>Direct Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Contract_Price_from_Opportunity__c</fullName>
        <formula>Opportunity__r.Final_Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final contract price pulled through from the related opportunity</inlineHelpText>
        <label>EPC Contract Price from Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Contract_Price_from_Pricing_Tool__c</fullName>
        <inlineHelpText>Final price including first year O&amp;M (Pricing summary cell J57)</inlineHelpText>
        <label>EPC Contract Price from Pricing Tool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESD_Contribution_Margin__c</fullName>
        <inlineHelpText>Energy Storage Department Contribution Margin</inlineHelpText>
        <label>Storage Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESD_Direct_COGS__c</fullName>
        <description>Required if Opportunity includes Storage.</description>
        <inlineHelpText>Energy Storage Division Direct Cost of Goods Sold. Required if Opportunity includes Storage.</inlineHelpText>
        <label>Storage Direct COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESD_Final_Price__c</fullName>
        <inlineHelpText>Energy Storage Department Final Price</inlineHelpText>
        <label>Storage Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESU_kWh__c</fullName>
        <label>Energy Storage Unit $/kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_COD_Date__c</fullName>
        <label>Estimated COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_NTP_Date__c</fullName>
        <inlineHelpText>Enter estimated Notice to Proceed date.</inlineHelpText>
        <label>Estimated NTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimating_Tool__c</fullName>
        <description>Measures process time on Pricing Requests. Allows to differentiate to see if countermeasures are effective.</description>
        <label>Estimating Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PT Lite</fullName>
                </value>
                <value>
                    <fullName>PVBid</fullName>
                </value>
                <value>
                    <fullName>Indicative</fullName>
                    <isActive>false</isActive>
                    <label>Indicative</label>
                </value>
                <value>
                    <fullName>Pricing Tool</fullName>
                    <isActive>false</isActive>
                    <label>Pricing Tool</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <label>Exclusions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Date_PSD_Completion__c</fullName>
        <label>Expected Date PSD Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Award_Date__c</fullName>
        <label>Expected Project Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fields_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fields Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_EPC_Total__c</fullName>
        <inlineHelpText>(S+S Direct COGS* Markup %) + S+S Direct COGS</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_EPC_W__c</fullName>
        <label>EPC $/W</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percentage__c</fullName>
        <description>Gross Margin Percentage from Pricing Tool</description>
        <inlineHelpText>Gross Margin Percentage from Pricing Tool</inlineHelpText>
        <label>Gross Margin Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_from_the_Pricing_Tool__c</fullName>
        <inlineHelpText>Enter the Gross Margin $ amount from the Pricing Tool</inlineHelpText>
        <label>Gross Margin $ from the Pricing Tool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncludesSSS__c</fullName>
        <formula>IF(INCLUDES(Priced_System_Type__c, &quot;SSS&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>USED FOR CARPORT COST REDUCTION</inlineHelpText>
        <label>Includes SSS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only check this box if the pricing request includes energy storage</inlineHelpText>
        <label>Includes Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ineligible_costs__c</fullName>
        <label>Ineligible costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsSubmittedForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmittedForApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickoff_minus_PT_Request__c</fullName>
        <formula>Site__r.Project_Kickoff_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kickoff minus PT Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH_OppID_Child__c</fullName>
        <description>Pulling down the opportunity&apos;s id, used with LH to match with the opportunity id on opportunity</description>
        <formula>Opportunity__r.Assigned_Apps_Engineer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LH_UserID_Apps Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Terms__c</fullName>
        <description>Missing costs that reduced margin post ROD approval</description>
        <inlineHelpText>Commercial Operation Date(COD/PTO),Site Mobilization or Other</inlineHelpText>
        <label>Lease Start Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_AE_Approved_PSD_for_Pricing__c</fullName>
        <label>Link to AE Approved PSD for Pricing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_AE_Due_Diligence__c</fullName>
        <label>Link to AE Due Diligence</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Abstracts_Folder__c</fullName>
        <label>Link to Abstracts Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Assumptions_and_Exclusion__c</fullName>
        <label>Link to Assumptions and Exclusion</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Bids_Folder__c</fullName>
        <label>Link to Bids Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Contracts__c</fullName>
        <label>Link to Contracts</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_PSD_or_Helioscope_being_priced__c</fullName>
        <inlineHelpText>this field was previously Link_to_PSD_or_Helioscope_being_priced, which has been relocated to the PSD revision page in a new section called Design.  this field is for reference only.</inlineHelpText>
        <label>Previous design links</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Pricing_Tool_on_box_com__c</fullName>
        <inlineHelpText>Link to the pricing tool spreadsheet on Box</inlineHelpText>
        <label>Link to Estimating Tool on box.com</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Links_to_Additional_Documents__c</fullName>
        <inlineHelpText>Links to files on Box</inlineHelpText>
        <label>Links to Additional Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinktoESDPricingTool__c</fullName>
        <description>paste box.com link to ESD pricing tool</description>
        <inlineHelpText>paste box.com link to ESD pricing tool</inlineHelpText>
        <label>Link to Storage Estimating Tool</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Liquidated_Damages__c</fullName>
        <label>Liquidated Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobilization_Date__c</fullName>
        <description>Pulls in the approximate install date, unless blank. Field is manually filled in in that case.</description>
        <inlineHelpText>Pulls in the approximate install date, unless blank. Field is manually filled in in that case.</inlineHelpText>
        <label>Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Solar Modules, M-c-Si, M-Thin Film</value>
            </filterItems>
            <filterItems>
                <field>Product2.Status__c</field>
                <operation>notEqual</operation>
                <value>Not in Use</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Price_Assumption__c</fullName>
        <label>Module Price Assumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_RE_Contractual_Scope__c</fullName>
        <label>Notes RE: Contractual Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Use this field to call out special design and contract requirements as well any scope clarifications</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_or_special_pricing_concerns__c</fullName>
        <inlineHelpText>If none enter in NONE. For items that are unique to the project such as LD’s, special specifications, work hours, Preveiling wage requirements, Bonding requirements, Buy American clauses, Union labor, or other such items or potential price concerns.</inlineHelpText>
        <label>Notes or special pricing concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit_for_Approval__c</fullName>
        <formula>IF 
(
Pricing_Request_Completed__c = True,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001wQ0Z&quot;, &quot;WHITE&quot;), 

IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001wQ0P&quot;, &quot;WHITE&quot;))</formula>
        <inlineHelpText>If YES and you are ready to submit for approval, click on Submit for approval button.
If NO it means the Pricing Response section is not yet complete.</inlineHelpText>
        <label>OK to Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>The opportunity that the pricing tool approval is related to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Tool_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSD_Revision_Link__c</fullName>
        <description>used to help compare links referenced between objects on cc submittal</description>
        <formula>&quot;https://na29.salesforce.com/&quot;&amp;PSD_Revision__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSD Revision Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSD_Revision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSD Revision</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PSD_Revision__c.Pre_Sales_Design__r.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PSD_Revision__c</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVBid_Snapshot_Time__c</fullName>
        <description>The timestamp on the PVBid snapshot that is creating when synchronizing the bid.</description>
        <inlineHelpText>The timestamp on the PVBid snapshot that is creating when synchronizing the bid.</inlineHelpText>
        <label>PVBid Snapshot Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PV_Direct_COGS__c</fullName>
        <label>PV Direct COGS $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Total__c</fullName>
        <label>PV Total $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Payment_Bond__c</fullName>
        <label>Performance Payment Bond</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit_costs_validated_with_the_town__c</fullName>
        <inlineHelpText>Are the permit costs validated?  If so, by who?</inlineHelpText>
        <label>Permit costs validated with the town?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up to user table, select person who will be responsible for completing this request.</inlineHelpText>
        <label>Person Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picasa_Album__c</fullName>
        <formula>Opportunity__r.Picasa_Album__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picasa Album</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Construction_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Construction Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the final revision</inlineHelpText>
        <label>Pre-Sales Design</label>
        <referenceTo>PSD__c</referenceTo>
        <relationshipName>Pricing_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Vailing_Wage__c</fullName>
        <formula>Case(Opportunity__r.Prevailing_Wage__c, 
&quot;Yes&quot;, &quot;Yes&quot;, 
&quot;No&quot;, &quot;No&quot;, 
null)</formula>
        <inlineHelpText>Brought over from Opportunity</inlineHelpText>
        <label>Pre-Vailing Wage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prelim_Pricing_Tool_EPC_Contract_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set by trigger when the Pricing Tool Approval record Status is set to &quot;Final Approval&quot;.  It is set to the value of field EPC Contract Price from Pricing Tool of the Pricing Tool Approval record with Status set to &quot;Preliminary Approval&quot;.</description>
        <label>Prelim Pricing Tool EPC Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priced_System_Type__c</fullName>
        <description>When adding available values, add values to formula field Priced System Type on Finance Request object and Site Installation Types on Opportunity</description>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Tilt Ground</fullName>
                </value>
                <value>
                    <fullName>Single Axis Tracker</fullName>
                </value>
                <value>
                    <fullName>Standalone Storage</fullName>
                </value>
                <value>
                    <fullName>Floating Solar</fullName>
                </value>
                <value>
                    <fullName>Landfill</fullName>
                </value>
                <value>
                    <fullName>Dual Use/Ag Canopy</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>SSS</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Differences__c</fullName>
        <formula>IF( Prelim_Pricing_Tool_EPC_Contract_Price__c  = 0, 0, Prelim_Pricing_Tool_EPC_Contract_Price__c  -  EPC_Contract_Price_from_Pricing_Tool__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between the Prelim Pricing and the Final Pricing</inlineHelpText>
        <label>Pricing Differences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this box you are indicating that the request is complete and ready for review. An email will automatically go to the requester with the details.</inlineHelpText>
        <label>Pricing Request Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>